@@ -77,6 +77,7 @@ typedef struct
 	                         also frees it on ops_free(). */
 	const char *descr;    /* Description of operations. */
 	int shallow_eta;      /* Count only top level items, without recursion. */
+	int bg;               /* Executed in background (no user interaction). */
 	char *errors;         /* Multi-line string of errors. */
 
 	char *base_dir;   /* Base directory in which operation is taking place. */
@@ -91,8 +92,8 @@ typedef struct
 ops_t;
 
 /* Allocates and initializes new ops_t.  Returns just allocated structure. */
-ops_t * ops_alloc(OPS main_op, const char descr[], const char base_dir[],
-		const char target_dir[]);
+ops_t * ops_alloc(OPS main_op, int bg, const char descr[],
+		const char base_dir[], const char target_dir[]);
 
 /* Describes main operation with one generic word.  Returns the description. */
 const char * ops_describe(const ops_t *ops);
